// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CategoryModal should render with a subcategory 1`] = `
Array [
  <View
    accessible={true}
    collapsable={false}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "backgroundColor": "transparent",
        "bottom": 0,
        "left": 0,
        "opacity": 0,
        "position": "absolute",
        "right": 0,
        "top": 0,
      }
    }
  >
    <BlurView
      blurAmount={10}
      blurType="dark"
      style={
        Object {
          "bottom": 0,
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        }
      }
    />
  </View>,
  <View
    collapsable={false}
    style={
      Object {
        "alignSelf": "flex-end",
        "backgroundColor": "#FFFFFF",
        "borderColor": undefined,
        "borderTopLeftRadius": 22.473239436619718,
        "borderTopRightRadius": 22.473239436619718,
        "borderWidth": 0,
        "flexDirection": undefined,
        "flexShrink": 1,
        "justifyContent": undefined,
        "marginBottom": -64,
        "marginLeft": 0,
        "marginRight": 0,
        "marginTop": 45,
        "maxHeight": undefined,
        "overflow": "visible",
        "paddingBottom": 64,
        "paddingLeft": 0,
        "paddingRight": 0,
        "paddingTop": 0,
        "shadowOffset": Object {
          "height": 0,
          "width": 0,
        },
        "shadowOpacity": 1,
        "shadowRadius": 10,
        "transform": Array [
          Object {
            "translateY": 1334,
          },
        ],
        "width": 512,
      }
    }
  >
    <View
      accessible={true}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "flex": 1,
          "padding": 18,
        }
      }
    >
      <Text
        style={
          Array [
            Array [
              Object {
                "fontFamily": "SourceSansPro-Black",
              },
              Object {
                "alignSelf": "center",
                "fontSize": 27,
                "marginBottom": 22,
              },
            ],
            Object {
              "fontSize": 19.664084507042254,
            },
            Object {
              "alignSelf": "center",
              "fontSize": 27,
              "marginBottom": 22,
            },
          ]
        }
      >
        Category
      </Text>
      <View
        style={
          Object {
            "marginBottom": 18,
          }
        }
      >
        <Text
          style={
            Array [
              Array [
                Object {
                  "fontFamily": "SourceSansPro-Black",
                },
                Object {
                  "color": "#0E4B75",
                  "fontSize": 16,
                  "marginBottom": 7,
                },
              ],
              Object {
                "fontSize": 19.664084507042254,
              },
              Object {
                "color": "#0E4B75",
                "fontSize": 16,
                "marginBottom": 7,
              },
            ]
          }
        >
          Choose a Category:
        </Text>
        <View
          style={
            Object {
              "alignItems": "center",
              "flexDirection": "row",
            }
          }
        >
          <View
            accessible={true}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "backgroundColor": "#A4C7DF",
                "borderColor": "#A4C7DF",
                "borderRadius": 3,
                "borderWidth": 1,
                "marginRight": 13,
                "paddingHorizontal": 11,
                "paddingVertical": 4,
              }
            }
          >
            <Text
              style={
                Array [
                  Array [
                    Object {
                      "fontFamily": "SourceSansPro-Black",
                    },
                    Object {
                      "color": "#0E4B75",
                      "fontSize": 20,
                    },
                  ],
                  Object {
                    "fontSize": 19.664084507042254,
                  },
                  Object {
                    "color": "#0E4B75",
                    "fontSize": 20,
                  },
                ]
              }
            >
              Income
            </Text>
          </View>
          <View
            accessible={true}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "borderColor": "#A4C7DF",
                "borderRadius": 3,
                "borderWidth": 1,
                "marginRight": 13,
                "paddingHorizontal": 11,
                "paddingVertical": 4,
              }
            }
          >
            <Text
              style={
                Array [
                  Array [
                    Object {
                      "fontFamily": "SourceSansPro-Black",
                    },
                    Object {
                      "color": "#0E4B75",
                      "fontSize": 20,
                    },
                  ],
                  Object {
                    "fontSize": 19.664084507042254,
                  },
                  Object {
                    "color": "#0E4B75",
                    "fontSize": 20,
                  },
                ]
              }
            >
              Expense
            </Text>
          </View>
          <View
            accessible={true}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "borderColor": "#A4C7DF",
                "borderRadius": 3,
                "borderWidth": 1,
                "marginRight": 13,
                "paddingHorizontal": 11,
                "paddingVertical": 4,
              }
            }
          >
            <Text
              style={
                Array [
                  Array [
                    Object {
                      "fontFamily": "SourceSansPro-Black",
                    },
                    Object {
                      "color": "#0E4B75",
                      "fontSize": 20,
                    },
                  ],
                  Object {
                    "fontSize": 19.664084507042254,
                  },
                  Object {
                    "color": "#0E4B75",
                    "fontSize": 20,
                  },
                ]
              }
            >
              Transfer
            </Text>
          </View>
          <View
            accessible={true}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "borderColor": "#A4C7DF",
                "borderRadius": 3,
                "borderWidth": 1,
                "marginRight": 13,
                "paddingHorizontal": 11,
                "paddingVertical": 4,
              }
            }
          >
            <Text
              style={
                Array [
                  Array [
                    Object {
                      "fontFamily": "SourceSansPro-Black",
                    },
                    Object {
                      "color": "#0E4B75",
                      "fontSize": 20,
                    },
                  ],
                  Object {
                    "fontSize": 19.664084507042254,
                  },
                  Object {
                    "color": "#0E4B75",
                    "fontSize": 20,
                  },
                ]
              }
            >
              Exchange
            </Text>
          </View>
        </View>
      </View>
      <View
        style={
          Object {
            "borderBottomColor": "#D9E3ED",
            "borderBottomWidth": 1,
            "marginTop": 18,
          }
        }
      >
        <View
          onResponderRelease={[Function]}
          onStartShouldSetResponder={[Function]}
          pointerEvents="auto"
          style={
            Object {
              "height": 77,
              "position": "relative",
              "width": "100%",
            }
          }
        >
          <View
            collapsable={false}
            style={
              Object {
                "alignItems": "flex-end",
                "flexDirection": "row",
                "height": 73,
                "paddingBottom": 8,
                "paddingLeft": 0,
                "paddingRight": 0,
                "paddingTop": 16,
              }
            }
          >
            <View
              pointerEvents="none"
              style={
                Object {
                  "bottom": 0,
                  "left": 0,
                  "overflow": "hidden",
                  "position": "absolute",
                  "right": 0,
                  "top": 0,
                }
              }
            >
              <View
                collapsable={false}
                style={
                  Object {
                    "borderColor": "rgba(13, 33, 69, 1)",
                    "borderStyle": "solid",
                    "borderWidth": 1,
                    "bottom": 0,
                    "left": -3,
                    "position": "absolute",
                    "right": -3,
                    "top": -3,
                  }
                }
              />
            </View>
            <View
              style={
                Object {
                  "alignSelf": "stretch",
                  "flex": 1,
                }
              }
            >
              <View
                collapsable={false}
                style={
                  Object {
                    "left": "-100%",
                    "paddingLeft": "50%",
                    "position": "absolute",
                    "top": 0,
                    "transform": Array [
                      Object {
                        "scale": 0.75,
                      },
                      Object {
                        "translateY": 0,
                      },
                      Object {
                        "translateX": 0,
                      },
                    ],
                    "width": "200%",
                  }
                }
              >
                <Text
                  collapsable={false}
                  numberOfLines={1}
                  style={
                    Object {
                      "color": "rgba(13, 33, 69, 1)",
                      "fontSize": 20,
                      "includeFontPadding": false,
                      "lineHeight": 20,
                      "textAlign": "left",
                      "textAlignVertical": "top",
                    }
                  }
                >
                  Choose a sub-category
                </Text>
              </View>
              <View
                style={
                  Object {
                    "alignItems": "flex-end",
                    "flex": 1,
                    "flexDirection": "row",
                  }
                }
              >
                <TextInput
                  autoCapitalize="none"
                  autoCorrect={false}
                  disableFullscreenUI={true}
                  editable={true}
                  keyboardType="default"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onChangeText={[Function]}
                  onContentSizeChange={[Function]}
                  onFocus={[Function]}
                  onSubmitEditing={[Function]}
                  returnKeyType="done"
                  selectionColor="#0E4B75"
                  style={
                    Array [
                      Object {
                        "flex": 1,
                        "includeFontPadding": false,
                        "margin": 0,
                        "padding": 0,
                        "paddingTop": 0,
                        "textAlign": "left",
                        "textAlignVertical": "top",
                        "top": 2,
                      },
                      Object {
                        "color": "#25292C",
                        "fontSize": 20,
                        "height": 30,
                      },
                      undefined,
                    ]
                  }
                  underlineColorAndroid="transparent"
                  value="Paycheck"
                />
              </View>
            </View>
          </View>
          <View
            style={
              Array [
                Object {
                  "alignItems": "flex-start",
                  "flexDirection": "row",
                  "justifyContent": "flex-end",
                  "minHeight": 8,
                },
                Object {
                  "paddingLeft": 0,
                  "paddingRight": 0,
                },
              ]
            }
          />
        </View>
      </View>
      <View
        style={
          Object {
            "flex": 1,
            "overflow": "hidden",
          }
        }
      >
        <RCTScrollView
          applyWindowCorrection={[Function]}
          canChangeSize={true}
          contentContainerStyle={
            Object {
              "backgroundColor": undefined,
              "minHeight": 1,
              "minWidth": 1,
              "paddingLeft": 0,
              "paddingRight": 0,
            }
          }
          contentHeight={0}
          contentWidth={0}
          data={
            Array [
              Object {
                "display": "Income: Paycheck",
                "new": true,
                "raw": "Income:Paycheck",
                "selected": true,
              },
              Object {
                "display": "Exchange: Paycheck",
                "new": true,
                "raw": "Exchange:Paycheck",
                "selected": false,
              },
              Object {
                "display": "Expense: Paycheck",
                "new": true,
                "raw": "Expense:Paycheck",
                "selected": false,
              },
              Object {
                "display": "Transfer: Paycheck",
                "new": true,
                "raw": "Transfer:Paycheck",
                "selected": false,
              },
            ]
          }
          dataProvider={
            DataProvider {
              "_data": Array [
                Object {
                  "display": "Income: Paycheck",
                  "new": true,
                  "raw": "Income:Paycheck",
                  "selected": true,
                },
                Object {
                  "display": "Exchange: Paycheck",
                  "new": true,
                  "raw": "Exchange:Paycheck",
                  "selected": false,
                },
                Object {
                  "display": "Expense: Paycheck",
                  "new": true,
                  "raw": "Expense:Paycheck",
                  "selected": false,
                },
                Object {
                  "display": "Transfer: Paycheck",
                  "new": true,
                  "raw": "Transfer:Paycheck",
                  "selected": false,
                },
              ],
              "_firstIndexToProcess": 0,
              "_hasStableIds": true,
              "_requiresDataChangeHandling": false,
              "_size": 4,
              "getStableId": [Function],
              "rowHasChanged": [Function],
            }
          }
          disableRecycling={false}
          estimatedItemSize={67}
          extendedState={Object {}}
          externalScrollView={[Function]}
          finalRenderAheadOffset={250}
          forceNonDeterministicRendering={true}
          horizontal={false}
          initialOffset={0}
          initialRenderIndex={0}
          isHorizontal={false}
          keyExtractor={[Function]}
          keyboardShouldPersistTaps="handled"
          layoutProvider={
            GridLayoutProviderWithProps {
              "_acceptableRelayoutDelta": 1,
              "_getHeightOrWidth": [Function],
              "_getLayoutTypeForIndex": [Function],
              "_getSpan": [Function],
              "_hasExpired": false,
              "_maxSpan": 1,
              "_setLayoutForType": [Function],
              "_tempDim": Object {
                "height": 0,
                "width": 0,
              },
              "averageWindow": AverageWindow {
                "currentAverage": 67,
                "currentCount": 1,
                "inputValues": Array [
                  67,
                ],
                "nextIndex": 1,
              },
              "defaultEstimatedItemSize": 100,
              "layoutObject": Object {
                "size": undefined,
                "span": undefined,
              },
              "props": Object {
                "data": Array [
                  Object {
                    "display": "Income: Paycheck",
                    "new": true,
                    "raw": "Income:Paycheck",
                    "selected": true,
                  },
                  Object {
                    "display": "Exchange: Paycheck",
                    "new": true,
                    "raw": "Exchange:Paycheck",
                    "selected": false,
                  },
                  Object {
                    "display": "Expense: Paycheck",
                    "new": true,
                    "raw": "Expense:Paycheck",
                    "selected": false,
                  },
                  Object {
                    "display": "Transfer: Paycheck",
                    "new": true,
                    "raw": "Transfer:Paycheck",
                    "selected": false,
                  },
                ],
                "estimatedItemSize": 67,
                "keyExtractor": [Function],
                "keyboardShouldPersistTaps": "handled",
                "numColumns": 1,
                "renderItem": [Function],
              },
              "renderWindowInsets": Object {
                "height": 0,
                "width": 0,
              },
              "shouldRefreshWithAnchoring": true,
            }
          }
          maxRenderAhead={750}
          numColumns={1}
          onEndReached={[Function]}
          onEndReachedThreshold={0}
          onEndReachedThresholdRelative={0}
          onItemLayout={[Function]}
          onLayout={[Function]}
          onScroll={[Function]}
          onScrollBeginDrag={[Function]}
          onSizeChanged={[Function]}
          onVisibleIndicesChanged={[Function]}
          removeClippedSubviews={false}
          renderAheadOffset={0}
          renderAheadStep={250}
          renderContentContainer={[Function]}
          renderItem={[Function]}
          renderItemContainer={[Function]}
          rowRenderer={[Function]}
          scrollEventThrottle={16}
          scrollThrottle={16}
          scrollViewProps={
            Object {
              "contentContainerStyle": Object {
                "backgroundColor": undefined,
                "minHeight": 1,
                "minWidth": 1,
                "paddingLeft": 0,
                "paddingRight": 0,
              },
              "onLayout": [Function],
              "onScrollBeginDrag": [Function],
              "refreshControl": undefined,
              "style": Object {
                "minHeight": 1,
                "minWidth": 1,
              },
            }
          }
          style={
            Object {
              "minHeight": 1,
              "minWidth": 1,
            }
          }
          suppressBoundedSizeException={true}
          windowCorrectionConfig={
            Object {
              "applyToInitialOffset": true,
              "applyToItemScroll": true,
              "value": Object {
                "endCorrection": 0,
                "startCorrection": 0,
                "windowShift": -0,
              },
            }
          }
        >
          <View>
            <View
              style={
                Object {
                  "flexDirection": "column",
                }
              }
            >
              <AutoLayoutView
                enableInstrumentation={false}
                horizontal={false}
                onBlankAreaEvent={[Function]}
                onLayout={[Function]}
                renderAheadOffset={0}
                scrollOffset={0}
                style={
                  Object {
                    "height": 0,
                    "width": 0,
                  }
                }
                windowSize={0}
              />
            </View>
          </View>
        </RCTScrollView>
      </View>
    </View>
  </View>,
]
`;

exports[`CategoryModal should render with an empty subcategory 1`] = `
Array [
  <View
    accessible={true}
    collapsable={false}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "backgroundColor": "transparent",
        "bottom": 0,
        "left": 0,
        "opacity": 0,
        "position": "absolute",
        "right": 0,
        "top": 0,
      }
    }
  >
    <BlurView
      blurAmount={10}
      blurType="dark"
      style={
        Object {
          "bottom": 0,
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        }
      }
    />
  </View>,
  <View
    collapsable={false}
    style={
      Object {
        "alignSelf": "flex-end",
        "backgroundColor": "#FFFFFF",
        "borderColor": undefined,
        "borderTopLeftRadius": 22.473239436619718,
        "borderTopRightRadius": 22.473239436619718,
        "borderWidth": 0,
        "flexDirection": undefined,
        "flexShrink": 1,
        "justifyContent": undefined,
        "marginBottom": -64,
        "marginLeft": 0,
        "marginRight": 0,
        "marginTop": 45,
        "maxHeight": undefined,
        "overflow": "visible",
        "paddingBottom": 64,
        "paddingLeft": 0,
        "paddingRight": 0,
        "paddingTop": 0,
        "shadowOffset": Object {
          "height": 0,
          "width": 0,
        },
        "shadowOpacity": 1,
        "shadowRadius": 10,
        "transform": Array [
          Object {
            "translateY": 1334,
          },
        ],
        "width": 512,
      }
    }
  >
    <View
      accessible={true}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "flex": 1,
          "padding": 18,
        }
      }
    >
      <Text
        style={
          Array [
            Array [
              Object {
                "fontFamily": "SourceSansPro-Black",
              },
              Object {
                "alignSelf": "center",
                "fontSize": 27,
                "marginBottom": 22,
              },
            ],
            Object {
              "fontSize": 19.664084507042254,
            },
            Object {
              "alignSelf": "center",
              "fontSize": 27,
              "marginBottom": 22,
            },
          ]
        }
      >
        Category
      </Text>
      <View
        style={
          Object {
            "marginBottom": 18,
          }
        }
      >
        <Text
          style={
            Array [
              Array [
                Object {
                  "fontFamily": "SourceSansPro-Black",
                },
                Object {
                  "color": "#0E4B75",
                  "fontSize": 16,
                  "marginBottom": 7,
                },
              ],
              Object {
                "fontSize": 19.664084507042254,
              },
              Object {
                "color": "#0E4B75",
                "fontSize": 16,
                "marginBottom": 7,
              },
            ]
          }
        >
          Choose a Category:
        </Text>
        <View
          style={
            Object {
              "alignItems": "center",
              "flexDirection": "row",
            }
          }
        >
          <View
            accessible={true}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "borderColor": "#A4C7DF",
                "borderRadius": 3,
                "borderWidth": 1,
                "marginRight": 13,
                "paddingHorizontal": 11,
                "paddingVertical": 4,
              }
            }
          >
            <Text
              style={
                Array [
                  Array [
                    Object {
                      "fontFamily": "SourceSansPro-Black",
                    },
                    Object {
                      "color": "#0E4B75",
                      "fontSize": 20,
                    },
                  ],
                  Object {
                    "fontSize": 19.664084507042254,
                  },
                  Object {
                    "color": "#0E4B75",
                    "fontSize": 20,
                  },
                ]
              }
            >
              Income
            </Text>
          </View>
          <View
            accessible={true}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "borderColor": "#A4C7DF",
                "borderRadius": 3,
                "borderWidth": 1,
                "marginRight": 13,
                "paddingHorizontal": 11,
                "paddingVertical": 4,
              }
            }
          >
            <Text
              style={
                Array [
                  Array [
                    Object {
                      "fontFamily": "SourceSansPro-Black",
                    },
                    Object {
                      "color": "#0E4B75",
                      "fontSize": 20,
                    },
                  ],
                  Object {
                    "fontSize": 19.664084507042254,
                  },
                  Object {
                    "color": "#0E4B75",
                    "fontSize": 20,
                  },
                ]
              }
            >
              Expense
            </Text>
          </View>
          <View
            accessible={true}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "borderColor": "#A4C7DF",
                "borderRadius": 3,
                "borderWidth": 1,
                "marginRight": 13,
                "paddingHorizontal": 11,
                "paddingVertical": 4,
              }
            }
          >
            <Text
              style={
                Array [
                  Array [
                    Object {
                      "fontFamily": "SourceSansPro-Black",
                    },
                    Object {
                      "color": "#0E4B75",
                      "fontSize": 20,
                    },
                  ],
                  Object {
                    "fontSize": 19.664084507042254,
                  },
                  Object {
                    "color": "#0E4B75",
                    "fontSize": 20,
                  },
                ]
              }
            >
              Transfer
            </Text>
          </View>
          <View
            accessible={true}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "backgroundColor": "#A4C7DF",
                "borderColor": "#A4C7DF",
                "borderRadius": 3,
                "borderWidth": 1,
                "marginRight": 13,
                "paddingHorizontal": 11,
                "paddingVertical": 4,
              }
            }
          >
            <Text
              style={
                Array [
                  Array [
                    Object {
                      "fontFamily": "SourceSansPro-Black",
                    },
                    Object {
                      "color": "#0E4B75",
                      "fontSize": 20,
                    },
                  ],
                  Object {
                    "fontSize": 19.664084507042254,
                  },
                  Object {
                    "color": "#0E4B75",
                    "fontSize": 20,
                  },
                ]
              }
            >
              Exchange
            </Text>
          </View>
        </View>
      </View>
      <View
        style={
          Object {
            "borderBottomColor": "#D9E3ED",
            "borderBottomWidth": 1,
            "marginTop": 18,
          }
        }
      >
        <View
          onResponderRelease={[Function]}
          onStartShouldSetResponder={[Function]}
          pointerEvents="auto"
          style={
            Object {
              "height": 77,
              "position": "relative",
              "width": "100%",
            }
          }
        >
          <View
            collapsable={false}
            style={
              Object {
                "alignItems": "flex-end",
                "flexDirection": "row",
                "height": 73,
                "paddingBottom": 8,
                "paddingLeft": 0,
                "paddingRight": 0,
                "paddingTop": 16,
              }
            }
          >
            <View
              pointerEvents="none"
              style={
                Object {
                  "bottom": 0,
                  "left": 0,
                  "overflow": "hidden",
                  "position": "absolute",
                  "right": 0,
                  "top": 0,
                }
              }
            >
              <View
                collapsable={false}
                style={
                  Object {
                    "borderColor": "rgba(13, 33, 69, 1)",
                    "borderStyle": "solid",
                    "borderWidth": 1,
                    "bottom": 0,
                    "left": -3,
                    "position": "absolute",
                    "right": -3,
                    "top": -3,
                  }
                }
              />
            </View>
            <View
              style={
                Object {
                  "alignSelf": "stretch",
                  "flex": 1,
                }
              }
            >
              <View
                collapsable={false}
                style={
                  Object {
                    "left": "-100%",
                    "paddingLeft": "50%",
                    "position": "absolute",
                    "top": 0,
                    "transform": Array [
                      Object {
                        "scale": 1,
                      },
                      Object {
                        "translateY": 24,
                      },
                      Object {
                        "translateX": 0,
                      },
                    ],
                    "width": "200%",
                  }
                }
              >
                <Text
                  collapsable={false}
                  numberOfLines={1}
                  style={
                    Object {
                      "color": "rgba(13, 33, 69, 1)",
                      "fontSize": 20,
                      "includeFontPadding": false,
                      "lineHeight": 20,
                      "textAlign": "left",
                      "textAlignVertical": "top",
                    }
                  }
                >
                  Choose a sub-category
                </Text>
              </View>
              <View
                style={
                  Object {
                    "alignItems": "flex-end",
                    "flex": 1,
                    "flexDirection": "row",
                  }
                }
              >
                <TextInput
                  autoCapitalize="none"
                  autoCorrect={false}
                  disableFullscreenUI={true}
                  editable={true}
                  keyboardType="default"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onChangeText={[Function]}
                  onContentSizeChange={[Function]}
                  onFocus={[Function]}
                  onSubmitEditing={[Function]}
                  returnKeyType="done"
                  selectionColor="#0E4B75"
                  style={
                    Array [
                      Object {
                        "flex": 1,
                        "includeFontPadding": false,
                        "margin": 0,
                        "padding": 0,
                        "paddingTop": 0,
                        "textAlign": "left",
                        "textAlignVertical": "top",
                        "top": 2,
                      },
                      Object {
                        "color": "#25292C",
                        "fontSize": 20,
                        "height": 30,
                      },
                      undefined,
                    ]
                  }
                  underlineColorAndroid="transparent"
                  value=""
                />
              </View>
            </View>
          </View>
          <View
            style={
              Array [
                Object {
                  "alignItems": "flex-start",
                  "flexDirection": "row",
                  "justifyContent": "flex-end",
                  "minHeight": 8,
                },
                Object {
                  "paddingLeft": 0,
                  "paddingRight": 0,
                },
              ]
            }
          />
        </View>
      </View>
      <View
        style={
          Object {
            "flex": 1,
            "overflow": "hidden",
          }
        }
      >
        <RCTScrollView
          applyWindowCorrection={[Function]}
          canChangeSize={true}
          contentContainerStyle={
            Object {
              "backgroundColor": undefined,
              "minHeight": 1,
              "minWidth": 1,
              "paddingLeft": 0,
              "paddingRight": 0,
            }
          }
          contentHeight={0}
          contentWidth={0}
          data={
            Array [
              Object {
                "display": "Exchange: Buy Bitcoin",
                "new": false,
                "raw": "Exchange:Buy Bitcoin",
                "selected": true,
              },
              Object {
                "display": "Exchange: Sell Bitcoin",
                "new": false,
                "raw": "Exchange:Sell Bitcoin",
                "selected": true,
              },
              Object {
                "display": "Expense: Air Travel",
                "new": false,
                "raw": "Expense:Air Travel",
                "selected": false,
              },
              Object {
                "display": "Expense: Alcohol & Bars",
                "new": false,
                "raw": "Expense:Alcohol & Bars",
                "selected": false,
              },
            ]
          }
          dataProvider={
            DataProvider {
              "_data": Array [
                Object {
                  "display": "Exchange: Buy Bitcoin",
                  "new": false,
                  "raw": "Exchange:Buy Bitcoin",
                  "selected": true,
                },
                Object {
                  "display": "Exchange: Sell Bitcoin",
                  "new": false,
                  "raw": "Exchange:Sell Bitcoin",
                  "selected": true,
                },
                Object {
                  "display": "Expense: Air Travel",
                  "new": false,
                  "raw": "Expense:Air Travel",
                  "selected": false,
                },
                Object {
                  "display": "Expense: Alcohol & Bars",
                  "new": false,
                  "raw": "Expense:Alcohol & Bars",
                  "selected": false,
                },
              ],
              "_firstIndexToProcess": 0,
              "_hasStableIds": true,
              "_requiresDataChangeHandling": false,
              "_size": 4,
              "getStableId": [Function],
              "rowHasChanged": [Function],
            }
          }
          disableRecycling={false}
          estimatedItemSize={67}
          extendedState={Object {}}
          externalScrollView={[Function]}
          finalRenderAheadOffset={250}
          forceNonDeterministicRendering={true}
          horizontal={false}
          initialOffset={0}
          initialRenderIndex={0}
          isHorizontal={false}
          keyExtractor={[Function]}
          keyboardShouldPersistTaps="handled"
          layoutProvider={
            GridLayoutProviderWithProps {
              "_acceptableRelayoutDelta": 1,
              "_getHeightOrWidth": [Function],
              "_getLayoutTypeForIndex": [Function],
              "_getSpan": [Function],
              "_hasExpired": false,
              "_maxSpan": 1,
              "_setLayoutForType": [Function],
              "_tempDim": Object {
                "height": 0,
                "width": 0,
              },
              "averageWindow": AverageWindow {
                "currentAverage": 67,
                "currentCount": 1,
                "inputValues": Array [
                  67,
                ],
                "nextIndex": 1,
              },
              "defaultEstimatedItemSize": 100,
              "layoutObject": Object {
                "size": undefined,
                "span": undefined,
              },
              "props": Object {
                "data": Array [
                  Object {
                    "display": "Exchange: Buy Bitcoin",
                    "new": false,
                    "raw": "Exchange:Buy Bitcoin",
                    "selected": true,
                  },
                  Object {
                    "display": "Exchange: Sell Bitcoin",
                    "new": false,
                    "raw": "Exchange:Sell Bitcoin",
                    "selected": true,
                  },
                  Object {
                    "display": "Expense: Air Travel",
                    "new": false,
                    "raw": "Expense:Air Travel",
                    "selected": false,
                  },
                  Object {
                    "display": "Expense: Alcohol & Bars",
                    "new": false,
                    "raw": "Expense:Alcohol & Bars",
                    "selected": false,
                  },
                ],
                "estimatedItemSize": 67,
                "keyExtractor": [Function],
                "keyboardShouldPersistTaps": "handled",
                "numColumns": 1,
                "renderItem": [Function],
              },
              "renderWindowInsets": Object {
                "height": 0,
                "width": 0,
              },
              "shouldRefreshWithAnchoring": true,
            }
          }
          maxRenderAhead={750}
          numColumns={1}
          onEndReached={[Function]}
          onEndReachedThreshold={0}
          onEndReachedThresholdRelative={0}
          onItemLayout={[Function]}
          onLayout={[Function]}
          onScroll={[Function]}
          onScrollBeginDrag={[Function]}
          onSizeChanged={[Function]}
          onVisibleIndicesChanged={[Function]}
          removeClippedSubviews={false}
          renderAheadOffset={0}
          renderAheadStep={250}
          renderContentContainer={[Function]}
          renderItem={[Function]}
          renderItemContainer={[Function]}
          rowRenderer={[Function]}
          scrollEventThrottle={16}
          scrollThrottle={16}
          scrollViewProps={
            Object {
              "contentContainerStyle": Object {
                "backgroundColor": undefined,
                "minHeight": 1,
                "minWidth": 1,
                "paddingLeft": 0,
                "paddingRight": 0,
              },
              "onLayout": [Function],
              "onScrollBeginDrag": [Function],
              "refreshControl": undefined,
              "style": Object {
                "minHeight": 1,
                "minWidth": 1,
              },
            }
          }
          style={
            Object {
              "minHeight": 1,
              "minWidth": 1,
            }
          }
          suppressBoundedSizeException={true}
          windowCorrectionConfig={
            Object {
              "applyToInitialOffset": true,
              "applyToItemScroll": true,
              "value": Object {
                "endCorrection": 0,
                "startCorrection": 0,
                "windowShift": -0,
              },
            }
          }
        >
          <View>
            <View
              style={
                Object {
                  "flexDirection": "column",
                }
              }
            >
              <AutoLayoutView
                enableInstrumentation={false}
                horizontal={false}
                onBlankAreaEvent={[Function]}
                onLayout={[Function]}
                renderAheadOffset={0}
                scrollOffset={0}
                style={
                  Object {
                    "height": 0,
                    "width": 0,
                  }
                }
                windowSize={0}
              />
            </View>
          </View>
        </RCTScrollView>
      </View>
    </View>
  </View>,
]
`;
